[package]
name = "nom-leb128"
description = "Fast LEB128 decoding for the nom parser combinator library"
categories = ["encoding", "parser-implementations", "parsing", "wasm"]
keywords = ["leb128", "nom", "dalvik", "dwarf", "wasm"]
authors = ["Milkey Mouse <milkeymouse@meme.institute>"]
repository = "https://github.com/milkey-mouse/nom-leb128"
readme = "README.md"
license = "CC0-1.0"
version = "0.1.0"
edition = "2018"

[dependencies]
nom = { version = "6.0.0-alpha1", default-features = false }
num-traits = { version = "0.2.12", default-features = false }

[dev-dependencies]
arrayvec = "0.5.1"

# TODO: cargo-fuzz should enable dev-dependencies
[target.'cfg(fuzzing)'.dependencies]
arrayvec = "0.5.1"
